--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <div class="container">
+        <div class="upload-section">
+            <h2>Upload Your Photo</h2>
+            <div class="upload-container">
+                <input type="file" id="imageUpload" accept="image/*" class="hidden-input">
+                <label for="imageUpload" class="upload-button">Choose Photo</label>
+                <div id="uploadPreview" class="preview-container">
+                    <img src="" alt="Upload preview" style="display: none;">
+                </div>
+            </div>
+        </div>
         <div class="main-section">
             <div class="photo-container">
                 <h2>Source Photo</h2>
